# bisect

./: .clang-format  .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp  udp_socket.cpp  udp_socket.h
lib/: CMakeLists.txt
lib/include/bisect/reactor/: handler.h  reactor.h
lib/src/: handler.cpp  reactor.cpp
